# pti

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  astro.config.mjs  index.html  mem-spec.md  package-lock.json  package.json
.github/workflows/: main.yml
cmake/: macros.cmake  sokol.cmake  stb.cmake
docs/content/: welcome.md
docs/mustache/: page.mustache
engine/: CMakeLists.txt  platform.c  pti.h
engine/sokol/: sokol.c  update.sh
examples/: CMakeLists.txt
examples/demos/: CMakeLists.txt  moire.c  mosaic.c  rosecurve.c
examples/platformer/: CMakeLists.txt
examples/platformer/assets/: tilemap_2.ase
examples/platformer/src/: bank.cpp  bank.h  game.cpp  game.h  gamestate.cpp  gamestate.h  main.cpp
examples/platformer/src/entities/: bullet.cpp  coin.cpp  entities.h  goomba.cpp  player.cpp  pop.cpp  shooter.cpp
examples/platformer/src/entity/: base.cpp  base.h  bullet.cpp  bullet.h  coin.cpp  coin.h  goomba.cpp  goomba.h  player.cpp  player.h  projectile.cpp  registry.cpp  registry.h  shooter.cpp  shooter.h
examples/platformer/src/lib/: assets.cpp  assets.h  collisions.cpp  collisions.h  entity.cpp  entity.h
examples/platformer/src/world/: coordinate.h
examples/platformer_cpp/: CMakeLists.txt
examples/platformer_cpp/src/: bank.cpp  bank.h  main.cpp
examples/platformer_cpp/src/entity/: base.cpp  base.h  bullet.cpp  bullet.h  coin.cpp  goomba.cpp  goomba.h  player.cpp  player.h  registry.cpp  registry.h  shooter.h
examples/tests/: 00_setup.c  01_pset.c  02_line.c  03_rect.c  03_rectf.c  04_rect.c  04_rectf.c  05_circ.c  05_spr.c  06_circf.c  06_print.cpp  07_sprites.c  07_sprites.cpp  08_map.cpp  08_tilemap.c  08_tilemap.cpp  12_mosaic.c  20_topdown.c  21_tetris.c  21_tetris_bitwise.c  23_platformer.c  CMakeLists.txt
examples/tinylink/: CMakeLists.txt
examples/tinylink/src/: bank.cpp  bank.h  game.cpp  game.h  main.cpp  world.cpp
examples/tinylink/src/assets/: sprite.cpp
examples/tinylink/src/blah/include/: blah_aseprite.h  blah_ease.h  blah_filesystem.h  blah_image.h  blah_packer.h  blah_spatial.h  blah_stackvector.h  blah_stream.h  blah_time.h  blah_vector.h
examples/tinylink/src/blah/src/: blah_aseprite.cpp  blah_filesystem.cpp  blah_stream.cpp  blah_string.cpp  blah_subtexture.cpp  blah_time.cpp
examples/tinylink/src/blah/src/internal/: blah_internal.h  blah_platform.cpp  blah_platform.h
examples/tinylink/src/components/: animator.cpp  collider.cpp  ghost_frog.h  mover.cpp  orb.cpp  orb.h  player.cpp  tilemap.cpp  tilemap.h  timer.h
extra/: shell.html
extra/cmake/: macros.cmake  sokol.cmake  stb.cmake  tracy.cmake
libs/gl3w/: update.ps1  update.sh
libs/sokol/: sokol.c  update.sh
libs/stb/: stb.c  update.sh
platformer/: CMakeLists.txt
platformer/src/: game.cpp  main.cpp
platformer/src/entities/: bullet.cpp  goomba.cpp  player.cpp  shooter.cpp
platformer/src/lib/: assets.cpp  assets.h  collisions.h  entity.cpp  entity.h
samples/: moire.c  moire.js  mosaic.c  mosaic.js  rosecurve.c  rosecurve.js
samples/moire/: index.html
samples/mosaic/: index.html
samples/rosecurve/: index.html
src/: CMakeLists.txt  platform.c  pti.h
tests/: 03_rectf.c  05_spr.c  06_print.c  07_sprites.c  08_tilemap.c  10_rosecurve.c  21_tetris_bitwise.c  22_snake.c  24_entities.c  CMakeLists.txt  assets.c  assets.h  palettes.h  platform.c  platform_debug.cpp  platform_gl.c  platform_gl.cpp  platform_sokol.c  test_btn.c  test_circ.c  test_circ.js  test_circf.c  test_circf.js  test_cls.c  test_line.c  test_line.js  test_map.c  test_map.js  test_music.c  test_print.c  test_print.js  test_pset.c  test_pset.js  test_quit.c  test_rect.c  test_rect.js  test_rectf.c  test_rectf.js  test_setup.c  test_setup.js  (+5 more)
tests/assets/: font.ase  tilemap3.ase
tests/circ/: index.html
tests/circf/: index.html
tests/line/: index.html
tests/rect/: index.html
tests/rectf/: index.html
tinylink/: CMakeLists.txt
tinylink/src/: content.cpp  content.h  factory.h  game.cpp  world.h
tinylink/src/assets/: sprite.h
tinylink/src/blah/include/: blah.h  blah_calc.h  blah_color.h  blah_common.h  blah_string.h  blah_subtexture.h
tinylink/src/blah/src/: blah_image.cpp  blah_packer.cpp
tinylink/src/components/: animator.cpp  animator.h  collider.h  hurtable.h  mover.h  orb.cpp  player.h
tools/: fontgen.c  makefile  spritegen  spritegen.c  spritegen2  spritegen2.c  spritegen_encoded  spritegen_encoded.c  spritesheet.h  spritesheet2.h  spritesheet_encoded.h
tools/aseprite/: ase.sh  output.json
tools/aseprite/sprites/: ghostfrog.ase
web/: target-to-html.sh
website/src/: consts.ts
website/src/components/: Demo.astro  Meta.astro
website/src/content/: config.ts
website/src/content/samples/: moire.md  mosaic.md  rosecurve.md
website/src/content/tests/: circ.md  circf.md  line.md  rect.md  rectf.md
website/src/integrations/: symlink.ts
website/src/pages/: index.astro
website/src/pages/samples/: [slug].astro
website/src/pages/tests/: [slug].astro
