macro(pti_executable target files)
  add_executable(${target} platform.c ${files})

  target_include_directories(${target} PRIVATE ${PTI_DIR})
  target_include_directories(${target} PRIVATE ${THIRDPARTY_DIR})
  target_link_libraries(${target} PRIVATE sokol)

  emscripten(${target})
endmacro()

pti_executable(test_setup test_setup.c)
pti_executable(test_pset test_pset.c)
pti_executable(test_line test_line.c)
pti_executable(test_rect test_rect.c)
pti_executable(test_rectf test_rectf.c)
pti_executable(test_circ test_circ.c)
pti_executable(test_circf test_circf.c)
pti_executable(test_print test_print.c)
pti_executable(test_spr test_spr.c)
pti_executable(test_map test_map.c)