macro(pti_test target file)
  add_executable(${target} ${file})
  target_link_libraries(${target} PRIVATE engine)
endmacro()

# pti_test(00_setup 00_setup.c)
# pti_test(01_pset 01_pset.c)
# pti_test(02_line 02_line.c)
# pti_test(03_rectf 03_rectf.c)
# pti_test(04_rect 04_rect.c)
# pti_test(05_spr 05_spr.c)
# pti_test(06_print 06_print.c)
# pti_test(07_sprites 07_sprites.c)
# pti_test(08_tilemap 08_tilemap.c)
pti_test(10_rosecurve 10_rosecurve.c)
pti_test(11_moire 11_moire.c)
pti_test(12_mosaic 12_mosaic.c)
# pti_test(20_topdown 20_topdown.c)
# pti_test(21_tetris 21_tetris.c)
# pti_test(22_snake 22_snake.c)
# pti_test(23_platformer 23_platformer.c)